# sleep_classifiers_next

./: .gitignore  LICENSE  README.md  figures_mc_sleep_wake.py  main.py  pyproject.toml  run_preprocessing.py
data/: README.md
outputs/: README.md
outputs_test/features/: 5383425_features.parquet
scripts/: 01_run_preprocessing.py  02_reproduce_all.py  02_run_analysis.py  03_reproduce_all.py
sleep_classifiers_next/: __init__.py  cli.py  config.py
sleep_classifiers_next/etl/: __init__.py  activity_count.py  circadian.py  feature_pipeline.py  raw_processor.py
sleep_classifiers_next/evaluation/: __init__.py  cross_val.py  metrics.py  plots.py
sleep_classifiers_next/models/: __init__.py  base.py  lgbm_model.py  sklearn_models.py
src/: config.py  data_loader.py
src/evaluation/: plotter.py  validator.py
src/features/: builder.py  signal_processing.py
src/models/: base.py  baseline.py  modern_gbdt.py
src/sleep_next/: __init__.py  config.py
src/sleep_next/data/: __init__.py  loader.py  preprocess.py
src/sleep_next/evaluate/: __init__.py  cross_val.py  metrics.py
src/sleep_next/features/: __init__.py  clock_proxy.py  motion.py
src/sleep_next/models/: __init__.py  base.py  legacy.py  modern.py
src/sleep_next/visualize/: __init__.py  plotters.py
tests/: __init__.py  conftest.py  test_alignment.py  test_equivalence.py  test_etl.py  test_feature_alignment.py  test_models.py  test_staging_search.py  test_validation.py
