[project]
name = "sleep-classifiers-next"
version = "0.1.0"
description = "Refactored offline sleep stage classification pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "pdfminer.six>=20221105",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pyEDFlib>=0.1.37",
    "pytest>=8.0.0",
    "pandas>=2.0.0",
    "docx2txt>=0.8",
]

