[project]
name = "sleep-classifiers-next"
version = "0.1.0"
description = "Production-grade sleep stage classifiers with raw accelerometry and PPG heart rate data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "polars>=0.20.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "pydantic>=2.6.0",
    "loguru>=0.7.0",
    "lightgbm>=4.3.0",
    "pyarrow>=15.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[project.scripts]
sleep-classify = "sleep_classifiers_next.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
