[project]
name = "sleep-classifiers-next"
version = "0.1.0"
description = "Modern Machine Learning Sleep Classification Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "lightgbm>=4.3.0",
    "xgboost>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sleep_next"]
